fixed title alignement on project page

--- a/src/app/[locale]/projects/[projectKey]/project-page.module.css
+++ b/src/app/[locale]/projects/[projectKey]/project-page.module.css
@@ -106,6 +106,7 @@
 @media (max-width: 1024px) {
     .projectPageContainer {
         .projectHeader {
+
             & h2 {
                 flex-direction: row;
                 font-size: 2rem;
@@ -137,7 +138,6 @@
 @media (max-width: 768px) {
     .projectPageContainer {
         .projectHeader {
-            align-items: flex-start;
             gap: 0.5rem;
 
             & h2 {
